infrastructure/configs/virtalservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apps-vs
  namespace: apps-production
spec:
  hosts:
  - aks.tuilakhanh.id.vn # this should match your DNS name
  gateways:
  - api-gateway
  http:
  - match:
    - uri:
        prefix: "/products"
    route:
    - destination:
        host: product-service
        port:
          number: 8081
  - match:
    - uri:
        prefix: "/orders"
    route:
    - destination:
        host: order-service
        port:
          number: 8082
